@startuml TrackingDbContext

interface IMongoDbContext extends IDisposable {
    +Instance : DbContext
    +GetDatabase() : IMongoDatabase
}
' ========= Entity class =========
class BaseMongoDBEntity {
    +Id : Guid
}

class BaseMongoDBAuditableEntity extends BaseMongoDBEntity {
    +DateTime CreatedAt
    +DateTime UpdatedAt
}

class UserViewRecipeDetail extends BaseMongoDBAuditableEntity {
    +AuthorId: Guid
    +RecipeId: Guid
}

class UserSearchRecipe extends BaseMongoDBAuditableEntity {
    +AccountId: Guid
    +Keyword: string
}

class UserSearchUser extends BaseMongoDBAuditableEntity {
    +AccountId: Guid
    +Keyword: string 
}

class AdminActivityLog extends BaseMongoDBAuditableEntity {
    +AccountId: Guid
    +ActivityType: ActivityType
    +EntityId: Guid
    +EntityType: ActivityEntityType
    +SecondaryEntityId: Guid
    +SecondaryEntityType: ActivityEntityType
}

enum ActivityType
{
    CREATE
    UPDATE
    DISABLE
    RESTORE
    MARK_COMPLETE
    REOPEN
}

enum ActivityEntityType
{
    RECIPE
    COMMENT
    TAG
    USER
    ADMIN
    REPORT_RECIPE
    REPORT_COMMENT
    REPORT_USER
}

interface IApplicationDbContext extends IMongoDbContext {
    +UserViewRecipeDetails: DbSet<UserViewRecipeDetail>
    +UserSearchRecipes: DbSet<UserSearchRecipe>
    +UserSearchUsers: DbSet<UserSearchUser>
    +AdminActivityLogs: DbSet<AdminActivityLog>
}
class ApplicationDbContext extends DbContext implements IApplicationDbContext {
    +UserViewRecipeDetails: DbSet<UserViewRecipeDetail>
    +UserSearchRecipes: DbSet<UserSearchRecipe>
    +UserSearchUsers: DbSet<UserSearchUser>
    +AdminActivityLogs: DbSet<AdminActivityLog>
    +Instance : DbContext
    +ApplicationDbContext()
    +ApplicationDbContext(options : DbContextOptions<ApplicationDbContext>)
    +OnConfiguring(optionsBuilder : DbContextOptionsBuilder) : void
    +OnModelCreating(modelBuilder : ModelBuilder) : void
    +GetDatabase() : IMongoDatabase
}

' ========= Library class =========
interface IDisposable #black;line:white;text:white
class "DbSet<T>" #black;line:white;text:white
class DbContext #black;line:white;text:white

AdminActivityLog "1" *-- "1" ActivityType
AdminActivityLog "1" *-- "1..2" ActivityEntityType

IMongoDbContext o-- DbContext

ApplicationDbContext "1" o-- "1..*" "DbSet<T>"
ApplicationDbContext "1" o-- "1" UserViewRecipeDetail
ApplicationDbContext "1" o-- "1" UserSearchRecipe
ApplicationDbContext "1" o-- "1" UserSearchUser
ApplicationDbContext "1" o-- "1" AdminActivityLog

' =========== Style ==============

ApplicationDbContext o-[hidden]down- "DbSet<T>"
ApplicationDbContext o-[hidden]down- UserViewRecipeDetail

BaseMongoDBAuditableEntity -[hidden]right- BaseMongoDBEntity 
BaseMongoDBAuditableEntity -[hidden]up- UserViewRecipeDetail 


@enduml